page 7 to 10 (4 pages) complete

--- a/tex-for-print/001-070/001-070.tex
+++ b/tex-for-print/001-070/001-070.tex
@@ -470,21 +470,21 @@ jAlagA\char'273naM sharadhi nuMgida kaMDeneMdeMbudiV\-gaLurutaradaMgaleVpasathxl
 \begin{entry}
 \word{aMgavideyx}
 \src{va}
-\meaning{\arthanonum{parxdhAna videyxe aMgavAda videyx; AtamxsAkASxtAkxra mADikoLuLxva videyx; shiva\-yoVga. mAyAparxpaMcakekx\break saMbaMdhisida videyx:}
-\ullekha{maneya gaMDana manevAteRyaneVna heVLuvenavAvx! aMgavideyxyanolalx, kaMgaLoLagaNa kasava kaLedalalxde noVDaliVya (savasaM. 1; basava. 912-238).}}
+\meaning{\arthanonum{parxdhAna videyxge aMgavAda videyx; AtamxsAkASxtAkxra mADikoLuLxva videyx; shiva\-yoVga. mAyAparxpaMcakekx\break saMbaMdhisida videyx:}
+\ullekha{maneya gaMDana manevAteRyaneVna heVLuvenavAvx! aMgavideyxyanolalx, kaMgaLoLagaNa kasava kaLedalalxde noVDaliVya. (savasaM. 1; basava. 912-238).}}
 \smallskip
 \newmeaning{\ni{aMgavidAyx - aMgasayx vidAyx aMgavidAyx}}
-\newmeaning{\arthanonum{(noVDi. aMga)}}
+\newmeaning{\arthanonum{\SEE{aMga}}}
 \end{entry}
 
 \smallskip 
 
 \begin{entry}
-\word{aMgaviSaya BArxMta}
+\word{aMgaviSayaBArxMta}
 \src{va}
-\meaning{\arthanonum{aMgakekx saMbaMdhisida iMdirxya viSaya suKagaLeV AdhAyxtimxka suKakikxMta hecucx eMba BarxmeyuLaLxvanu.} \ullekha{aMgaviSaya BarxmeyaM kaLadu aMgaviSaya BArxMtana mADidarayayx. (savasaM. 10; kuSaTxgi. 502-265)}}
+\meaning{\arthanonum{aMgakekx saMbaMdhisida viSayasuKagaLeV AdhAyxtimxka suKakikxMta hecucx eMba BarxmeyuLaLxvanu.} \ullekha{aMgaviSaya BarxmeyaM kaLedu aMgaviSaya BArxMtana mADidarayayx. (savasaM. 10; kuSaTxgi. 502-265)}}
 \smallskip
-\newmeaning{\ni{aMgaviSayaBArxMtaH - aMgasayx viSayaH aMgaviSayaH, tasimxnf aMgaviSayeV BArxMtaH aMgaviSayaBArxMtaH, aBavA liMgaviSayeVNa BArxMtaH aMgaviSayaBArxMtaH}}
+\newmeaning{\ni{aMgaviSayaBArxMtaH - aMgasayx viSayaH aMgaviSayaH, tasimxnf aMgaviSayeV BArxMtaH aMgaviSayaBArxMtaH, athavA liMgaviSayeVNa BArxMtaH aMgaviSayaBArxMtaH}}
 \end{entry}
 
 %\smallskip 
@@ -499,7 +499,7 @@ jAlagA\char'273naM sharadhi nuMgida kaMDeneMdeMbudiV\-gaLurutaradaMgaleVpasathxl
 \begin{entry}
 \word{aMgashudidhx}
 \meaning{\arthanonum{shariVra neYmaRlayx; ariSaDavxgaRgaLiMda mukatxvAda tanu.}
-\ullekha{aMgashudidhx nimaRLa nirupama satayxsatayx tAnAgi. (savasaM. 6; uripe. 1305-421); kAya\-shudidhxgaLaMgashudidhxyaMganAyxsavA urukaranAyxsa savaR\-sididhxgaLapapxveYyaMgadalilx liMgava dharisi\-dAkaSxNaM. (viVsheYpu. 7-110-44).}}
+\ullekha{aMgashudidhx nimaRLa nirupama satayxsatayx tAnAgi. (savasaM. 6; uripe. 1305-421); kAya\-shudidhxgaLaMgashudidhxyaMganAyxsavA urukaranAyxsa savaR\-sididhxgaLapapxveYyaMgadalilx liMgava dharisidA\-kaSxNaM. (viVsheYpu. 7-110-44).}}
 \smallskip
 \newmeaning{\ni{aMgasayx shudidhxH - aMgashudidhxH}}
 \end{entry}
@@ -507,8 +507,8 @@ jAlagA\char'273naM sharadhi nuMgida kaMDeneMdeMbudiV\-gaLurutaradaMgaleVpasathxl
 \begin{entry}
 \word{aMgaSaTasxthXla}
 \src{kA}
-\meaning{\arthanonum{aMgasathxlagaLu Aru; aMgaveMdare pUjaka; liMga\-veMdare pUjayx; aMganu liMgavanunx ArA\-dhisi sAkASxtakxrisi\-koLaLxlu Aru haMtagaLu. iveMdare : Bakatxsathxla, maheVsha\-sathxla, parxsAdisathxla, pArxNaliMgisathxla, sharaNasathxla matutx aikayxsathxla. ivu sUthxla, sUkaSxmX matutx kAraNashariVra\-gaLiganusAravAgiruva Aru sathxlagaLAgirutatxve.}
-\ullekha{Bakatx mAheVshavxra parxsAdigaLeMdu GanapArxNa\-liMgi sharaNa\-nuveY[meY]kayxnA\char'273\char'304\char'311Mdu I pariyalihudu Bakatxna aMga\-SaTasxthXla [pAThAM. Dusathx]laM. (diVkASxboV. 117-25); aMga\-SaTasxthXlamuM parxvaqtitx mAgaRdoLudisidudunolidu poLeva cicaCxkitxyiM shivaneV mahAliMgamenisi tatesxVvakadoLu baLikaleYkayx sathxLavadAyutx. (cebapu. 61-25).}}
+\meaning{\arthanonum{aMgasathxlagaLu Aru; aMgaveMdare pUjaka; liMga\-veMdare pUjayx; aMganu liMgavanunx ArA\-dhisi sAkASxtakxrisi\-koLaLxlu Aru haMtagaLu. ivu : Bakatxsathxla, mAheVshavxra\-sathxla, parxsAdisathxla, pArxNaliMgisathxla, sharaNasathxla matutx aikayxsathxla. ivu sUthxla, sUkaSxmX matutx kAraNashariVra\-gaLiganusAravAgiruva Aru sathxlagaLAgirutatxve.}
+\ullekha{Bakatx mAheVshavxra parxsAdigaLeMdu GanapArxNa\-liMgi sharaNa\-nuveY[meY]kayxnA\char'273\char'304\char'311Mdu I pariyalihudu Bakatxna aMga\-SaTasxthXla. [pAThAM. Dusathx]laM. (diVkASxboV. 117-25); aMga\-SaTasxthXlamuM parxvaqtitxmAgaRdoLudisidudunolidu poLeva cicaCxkitxyiM shivaneV mahAliMgamenisi tatesxVvakadoLu baLikaleYkayx sathxLavadAyutx. (cebapu. 61-25).}}
 \smallskip
 \newmeaning{\ni{aMgaSaTasxthXlaM - aMgasaMbaMdhi yatf SaTasxthXlaM tatf aMga\-SaTasxthXlaM}}
 \end{entry}
@@ -517,29 +517,32 @@ jAlagA\char'273naM sharadhi nuMgida kaMDeneMdeMbudiV\-gaLurutaradaMgaleVpasathxl
 \word{aMgasaMga}
 \src{va}
 \meaning{\arthanonum{kUTa; saMBoVga; deVhada meVliruva vAyxmoVha.}
-\ullekha{aMgadalilx liMgasaMga, liMgadalilx aMgasaMgava mADiheneMdaDe, saMdu BeVdavaLiva pari eMtu heVLA (savasaM. 1; basava. 965-258); aMgasaMgiyAdavaMge liMgasaMga\-vilalx, liMgasaMgiyAdavaMge aMgasaMgavilalx (savasaM. 3; cenanxba. 334-108); liMgeYkayxMge aMgasaMga matetxlilxyado ? (savasaM. 5; akakxma. 145-45); aMganeya saMgava mADihenu nAnu, anuvaMganeyalalx. A aMganeya aMgasaMgava kaMDu niMdavaLayayx. (savasaM. 5; niVlamamx. 803-257); tAraki tAraki taLitaMte aMgasaMgadalilxdadxLavevx. (savasaM. 7; gajeVsha. 260-90).}}
+\ullekha{aMgadalilx liMgasaMga, liMgadalilx aMgasaMgava mADiheneMdaDe, saMdu BeVdavaLiva pari eMtu heVLA (savasaM. 1; basava. 965-258); aMgasaMgiyAdavaMge liMgasaMga\-vilalx, liMgasaMgiyAdavaMge aMgasaMgavilalx (savasaM. 3; cenanxba. 334-108); liMgeYkayxMge aMgasaMga matetxlilxyado ? (savasaM. 5; akakxma. 145-45); aMganeya saMgava mADihenu nAnu, AnuvaMganeyalalx. A aMganeya aMgasaMgava kaMDu niMdavaLayayx. (savasaM. 5; niVlamamx. 803-257); tAraki tAraki taLitaMte aMgasaMgadalilxdadxLavevx. (savasaM. 7; gajeVsha. 260-90).}}
 \smallskip
 \newmeaning{\ni{aMgasaMgaH - aMgasayx saMgaH aMgasaMgaH}}
 \end{entry}
 
 \begin{entry}
 \word{aMgasaMgi}
+\src{va}
 \meaning{\arthanonum{shariVra vAyxmoVhavuLaLxvanu.}
-\ullekha{aMgada dhareya meVle mUru bAviyuMTu: modala bAyiya muTiTxdAta aMga\-saMgiyAdanu. (savasaM. 2; alalxma. 618-167); aMga\-saMgiyAdavaMge liMgasaMgavilalx, liMgasaMgiyAdavaMge aMga\-saMgavilalx. (savasaM. 3; cenanxba. 334-108); aMgasaMga\-dalilx liMgasaMgiyAdenu, liMgasaMgadalilx aMga\-saMgiyAdenu. (savasaM. 5; akakxma. 8-3); aMgasaMgigaLa liMgasaMgigaLu avagarxhisikoMDaru noVDirayAyx. (savasaM. 8; marushaM. 1119-383); nimamx sharaNa liMgasaMgiyeV aMgasaMgiyeMdu tiLiyabAradu. (savasaM.~11; savxtaMtarx. 1090-518).}}
+\ullekha{aMgada dhareya meVle mUru bAviyuMTu: modala bAviya muTiTxdAta aMga\-saMgiyAdanu. (savasaM. 2; alalxma. 618-167); aMga\-saMgiyAdavaMge liMgasaMgavilalx, liMgasaMgiyAdavaMge aMga\-saMgavilalx. (savasaM. 3; cenanxba. 334-108); aMgasaMga\-dalilx liMgasaMgiyAdenu, liMgasaMgadalilx aMga\-saMgiyAdenu. (savasaM. 5; akakxma. 8-3); aMgasaMgigaLa liMgasaMgigaLu avagarxhisikoMDaru noVDirayAyx. (savasaM. 8; marushaM. 1119-383); nimamx sharaNa liMgasaMgiyeV aMgasaMgiyeMdu tiLiyabAradu. (savasaM.~11; savxtaMtarx. 1090-518).}}
 \smallskip
 \newmeaning{\ni{aMgasaMgiV - aMgasayx saMgaH asayx asitx iti aMgasaMgiV}}
 \end{entry}
 
 \begin{entry}
 \word{aMgasaMsAra}
+\src{va}
 \meaning{\arthanonum{deVhakekx saMbaMdhisida vayxvahAra; aMganige Agiruva baMdhana athavA meYlige (soVMku).} \ullekha{aMga\-saMsAra liMgadalilxtutx a\char'273\char'236tu kAyaveMba saMbaMdha saMshayavaLidu nisasxM\-deVhiyAgipapxnu noVDA basavaNaNxnu (savasaM. 2; alalxma. 721-198).}}
 \smallskip
-\newmeaning{\ni{aMgasaMsAraH - aMgasayx saMsAraH aMgasaMsAra}}
+\newmeaning{\ni{aMgasaMsAraH - aMgasayx saMsAraH aMgasaMsAraH}}
 \end{entry}
 
 \begin{entry}
 \word{aMgasaMsAri}
-\meaning{\arthanonum{aihikasuKadalilx niratanAdavanu.}
+\src{va}
+\meaning{\arthanonum{aihika suKadalilx niratanAdavanu.}
 \ullekha{pArxNaliMga\-veMbudu aMgasaMsAri, jaMgamaveMbudu liMgasaMsAri. (savasaM. 2; alalxma. 221-69).}}
 \smallskip
 \newmeaning{\ni{aMgasaMsAriV - aMgasayx saMsAraH asimxnf asitx iti aMga\-saMsAriV}}
@@ -548,8 +551,8 @@ jAlagA\char'273naM sharadhi nuMgida kaMDeneMdeMbudiV\-gaLurutaradaMgaleVpasathxl
 \begin{entry}
 \word{aMgasuKa}
 \src{va}
-\meaning{\artha{deYhika suKa.} \ullekha{\hbox{aSaTxvidhAcaRneya} mADa\-balalxre aMgasuKaMgaLanariyadirabeVku. (savasaM. 3; \hbox{cenanxba.} 234-76); tanu naSaTxvAdaDeVnayAyx, mananaSaTxvAga\-dananxkakx ? aMgasuKa naSaTxvAdaDeVnayAyx, kaMgaLapaTalahariya\-dananxkakx ? (savasaM. 5; haDaliM. 1258-382).} \artha{liMga\-dalilx aMgavu liVyavAdAga aMgakekx laBayxvAguva AdhAyx\-timxka suKa.}
-\ullekha{sati-patiyeMba aMgasuKa hiMgi, liMgaveV pariyAda baLika satige patiyuMTe ? patige satiyuMTe ? hAluMDu meVluMbare guheVshavxrA ? (savasaM. 2; alalxma.\break 148-45); aMga\-suKakAkxgi liMgavanu maretu, kaMDa kaMDa\break padAthaRvanuMDaDe adu keMDadaMtAguvudayAyx. (savasaM. 3; cenanxba. 1249-435); tanujAcnxni saMbaMdhiliMga mUraroLage aMgasuKavane biTuTx liMgasuKi tAnAgi maMgaLAMganA kapila\-sidadhxmalilxkAjuRna. (savasaM. 4; sidadhxrA. 570-162).}}
+\meaning{\artha{aMgada suKa.} \ullekha{\hbox{aSaTxvidhAcaRneya} mADa\-balalxre aMgasuKaMgaLanariyadirabeVku. (savasaM. 3; \hbox{cenanxba.} 234-76); tanu naSaTxvAdaDeVnayAyx, mana naSaTxvAga\-dananxkakx ? aMgasuKa naSaTxvAdaDeVnayAyx, kaMgaLa paTala hariya\-dananxkakx ? (savasaM. 5; haDaliM. 1258-382).} \artha{liMga\-dalilx aMgavu liVyavAdAga aMgakekx laBayxvAguva AdhAyx\-timxka suKa.}
+\ullekha{sati-patiyeMba aMgasuKa hiMgi, liMgaveV patiyAda baLika satige patiyuMTe? patige satiyuMTe? hAluMDu meVluMbare guheVshavxrA? (savasaM. 2; alalxma.\break 148-45); aMga\-suKakAkxgi liMgavanu maretu, kaMDa kaMDa\break padAthaRvanuMDaDe adu keMDadaMtAguvudayAyx. (savasaM. 3; cenanxba. 1249-435); tanujAcnxni saMbaMdhiliMga mUraroLage aMgasuKavane biTuTx liMgasuKi tAnAgi maMgaLAMganAdi kapila\-sidadhxmalelxVshavxra. (savasaM. 4; sidadhxrA. 570-162).}}
 %\smallskip
 %\newmeaning{\ni{aMgasaKaH, aMgasayxsaKA - aMgasaKaH}}
 \end{entry}
@@ -566,12 +569,12 @@ EkaM liMgasathxlaM porxVkatxmanayxdaMgasathxlaM samxqqtamf ||
 \pauthor{(kirx.sA. BA- 3, pu. 106, a.sU., 2.10)}
 \smallskip
 %\newmeaning{\ullekha{aMgasathxla mUvatAtxru... kAdarxmA... (savasaM. 3; cenanxba. 883-263); aMgasathxlavAru... kAlAMtaka... (savasaM. 7; Dakekxya. 893-271); aMga\-sathxla mUru... aMgasathxlada liMga... (savasaM. 8; moVLimA. 1428-483); BakatxnaMga\-vAvudu... iMtiV aMga\-sathxlaMgaLa... (savasaM. 11; toVMTasi. 409-408); sharxdedhx sAvadhAna... aMgasathxlavAgi... (savasaM. 12; deVshisaM.).}}
-\newmeaning{\ullekha{idaralilx Bakatx, maheVshavxra, parxsAdi, pArxNaliMgi, sharaNa matutx aikayx eMba Aru muKayx viBAgagaLidudx ivugaLalilx punaH oLa viBAgagaLidudx oTuTx 44 sathxlagaLirutatxve. avu yAvuveMdare - 1. piMDasathxla, piMDajAcnxnasathxla, saMsAraheVyasathxla, gurukAruNayxsathxla, liMgadhAraNasathxla, viBUtisathxla, rudArxkaSx\-dhAraNasathxla, paMcAkaSxriVjapasathxla, Bakitxsathxla, surUpoV\-Bayasathxla, tirxvidhi saMpatutxsathxla, catuviRdha sArAyasathxla, upAdhimATasathxla, nirupAdhi mATasathxla matutx sahaja mATasathxla eMba 15 viBAga\-gaLu Bakatxsathxladalilxve. 2. mAheVshavxraparxshaMsAsathxla, liMga\-niSAThxsathxla, pUvARsharxya nirasanasathxla, vAgadevxYtanirasanasathxla, AhAvxnanirasanasathxla, aSaTxtanumUtiRnirasanasathxla, savaRgatanirasanasathxla, shivajaganamxyasathxla matutx deVhikaliMgasathxla eMba 9 viBAgagaLu mAheVshavxrasathxladalilxve. 3. pArxsAdisathxla, guru\-mAhAtamxyXsathxla, liMgamAhAtamxyXsathxla, jaMgamamAhAtamxyXsathxla, BakatxmAhAtamxyXsathxla, sharaNamAhAtamxyXsathxla matutx parxsAdamAhAtamxyXsathxla eMba 7 viBAgagaLu parxsAdisathxladalilxve. 4. pArxNa\-liMgisathxla, pArxNaliMgAcaRnasathxla, shivayoVgasamAdhisathxla, liMga\-nijasathxla matutx aMgaliMgasathxla eMba 5 viBAgagaLu pArxNaliMgi\-sathxladalilxve. 5. sharaNasathxla, tAmasanirasanasathxla, nideRVshasathxla matutx shiVlasaMpAdanasathxla eMba 4 viBAgagaLu sharaNasathxladalilxve. 6. aikayxsathxla, AcArasaMpatitxsathxla, EkaBAjanasathxla matutx saha\-BoVjanasathxla eMba 4 viBAgagaLu aikayxsathxladalilxve. ivugaLa vivaraNeyanunx AyAyA jAgagaLalilx sUcisalAgide: aMga\-sathxlaM tirxvidhameMtenalu modalu yoVgAMgaM divxtiVyadoLf BoVgAMgavA taqtiVyAMgaveV tAyxgAMgavu (shivaciM. 50-2); aKaMDaparipUNaR goVLakAkAra mahAliMgavu tananx savxliVleyiMda liMgasathxla aMgasathxlaveMdu eraDu parxkAravAyitutx (sidedhxVva. 11-38); sUcane: parashivaM mahadAdi tatatxvXMgaLelalxkekx nirupamasAthxnavAduda\char'273\char'236MdalAdudA sathxlanAmanivaRcanavu oreyalf savxshakitx saMkoSxVBa mAtarxdoLagatukxrutarasathxlanAmapadaveV davxyaMgaLoMdurutarAMgasathxlaM mikokxMdu liMgasathxlaMgaLiMteraDAdavu (viVsheYpu. 8-123-14).}}
-\newmeaning{\ni{aMgasathxlaM - aMgasayx aMgasaMbaMdhi sathxlaM aMga\-sathxlaM}}
+\newmeaning{\ullekha{idaralilx Bakatx, mAheVshavxra, parxsAdi, pArxNaliMgi, sharaNa matutx aikayx eMba Aru muKayx viBAgagaLidudx ivugaLalilx punaH oLa viBAgagaLidudx oTuTx 44 sathxlagaLirutatxve. avu yAvuveMdare - 1. piMDasathxla, piMDajAcnxnasathxla, saMsAraheVyasathxla, gurukAruNayxsathxla, liMgadhAraNasathxla, viBUtisathxla, rudArxkaSx\-dhAraNasathxla, paMcAkaSxriVjapasathxla, Bakitxsathxla, surUpoV\-Bayasathxla, tirxvidhisaMpatutxsathxla, catuviRdha sArAyasathxla, upAdhi mATasathxla, nirupAdhi mATasathxla matutx sahaja mATasathxla eMba 15 viBAga\-gaLu Bakatxsathxladalilxve. 2. mAheVshavxraparxshaMsAsathxla, liMga\-niSAThxsathxla, pUvARsharxya nirasanasathxla, vAgadevxYtanirasanasathxla, AhAvxnanirasanasathxla, aSaTxtanumUtiRnirasanasathxla, savaRgata nirasanasathxla, shivajaganamxyasathxla matutx deVhikaliMgasathxla eMba 9 viBAgagaLu mAheVshavxrasathxladalilxve. 3. pArxsAdisathxla, guru\-mAhAtamxyXsathxla, liMgamAhAtamxyXsathxla, jaMgamamAhAtamxyXsathxla, BakatxmAhAtamxyXsathxla, sharaNamAhAtamxyXsathxla matutx parxsAda\-mAhAtamxyXsathxla eMba 7 viBAgagaLu parxsAdisathxladalilxve. 4. pArxNa\-liMgisathxla, pArxNaliMgAcaRnasathxla, shivayoVgasamAdhisathxla, liMga\-nijasathxla matutx aMgaliMgasathxla eMba 5 viBAgagaLu pArxNaliMgi\-sathxladalilxve. 5. sharaNasathxla, tAmasanirasanasathxla, nideVRshasathxla matutx shiVlasaMpAdanasathxla eMba 4 viBAgagaLu sharaNasathxladalilxve. 6. aikayxsathxla, AcArasaMpatitxsathxla, EkaBAjanasathxla matutx saha\-BoVjanasathxla eMba 4 viBAgagaLu aikayxsathxladalilxve. ivugaLa vivaraNeyanunx AyAya jAgagaLalilx sUcisalAgide: aMga\-sathxlaM tirxvidhameMtenalu modalu yoVgAMgaM divxtiVyadoLf BoVgAMgavA taqtiVyAMgaveV tAyxgAMgavu (shivaciM. 50-2); aKaMDaparipUNaR goVLakAkAra mahAliMgavu tananx savxliVle\-yiMda liMgasathxla aMgasathxlaveMdu eraDu parxkAravAyitutx (sidedhxVva. 11-38); parashivaM mahadAdi tatatxvXMgaLelalxkekx nirupamasAthxnavAduda\char'273\char'236MdalAdudA sathxlanAmanivaRcanavu oreyalf savxshakitx saMkoSxVBa mAtarxdoLagatukxrutarasathxlanAma padaveV davxyaMgaLoMdurutarAMgasathxlaM mikokxMdu liMgasathxlaMgaLiMteraDAdavu. (viVsheYpu. 8-123-14).}}
+\newmeaning{\ni{aMgasathxlaM - aMgasayx aMgasaMbaMdhisathxlaM aMga\-sathxlaM}}
 \newmeaning{\artha{aMgasathxlaBeVda ivu tAyxgAMga, BoVgAMga matutx yoVgAMga eMdu mUru vidha.}}
 \medskip
 \begin{shl}
-aMgasathxlaM tathA porxVkatxmAcAyeRYHsUkaSxmXdashiRBiH |\\[2pt]
+aMgasathxlaM tathA porxVkatxmAcAyeYRHsUkaSxmXdashiRBiH |\\[2pt]
 yoVgAMgaM parxthamaM porxVkatxM BoVgAMgaM ca divxtiVyakamf ||\\[2pt]
 tAyxgAMgaM tu taqtiVyaM sAyxditeyxVvaM tirxvidhaM samxqqtamf ||
 \end{shl}
@@ -593,54 +596,54 @@ tAyxgAMgaM BavatiVteyxVvaM porxVcayxteV pAramAthiRkeYH ||
 \smallskip 
 \pauthor{(a.sU., 4. 11 - 13)}
 \smallskip 
-\newmeaning{\artha{sathxla viMgaDaNeya parikalapxne\-yalilx mUvatAtxru sathxla parikalapxneyU oMdu vidha. SaTasxthXlagaLa\-lilxruva Bakatx, maheVsha, parxsAdi, pArxNaliMgi, sharaNa matutx aikayx eMba Aru haMtagaLiganusAravAgiruva SaTacxkarx \-gaLa hAgU avugaLalilxya AcAra, guru, shiva, jaMgama, parxsAda matutx mahAliMga eMba SaDilxMgagaLu misharxvAgi uMTAda mUva\-tAtxru parxkArada aMgasathxlagaLu:}
+\newmeaning{\artha{sathxla viMgaDaNeya parikalapxne\-yalilx mUvatAtxru sathxla parikalapxneyU oMdu vidha. SaTasxthXlagaLa\-lilxruva Bakatx, maheVsha, parxsAdi, pArxNaliMgi, sharaNa matutx aikayx eMba Aru haMtagaLiganusAravAgiruva SaTacxkarx \-gaLa hAgU avugaLalilxya AcAra, guru, shiva, jaMgama, parxsAda matutx mahAliMga eMba SaDilxMga\-gaLu misharxvAgi uMTAda mUva\-tAtxru parxkArada aMgasathxlagaLu:}
 \ullekha{aMgasathxla {mUvatAtx\char'273\char'304} 
 {liMga\-sathxlamUvatAtx\char'273\char'304} nisasxMgaliMga\-sathxla meVle 
 {mUvatAtx\char'273\char'301\char'273} 
 aMga\-liMga {nisasxMgavA\char'273\char'301\char'273} BeVdisi pArxNaliMga\-dAdiparxBeya tiLiya peVLida (hirimaM. 686-11).}}
 %\newmeaning{\artha{sidAdhxMta shiKAmaNiyalilx nirUpitavAgiruvaMte Bakatxsathxladalilx hadineYdu, mAheVshavxrasathxladalilx oMbatutx, parxsAdisathxladalilx ELu, pArxNaliMgisathxladalilx aidu, sharaNasathxladalilx nAlukx matutx aikayxsathxladalilx nAlukx - oTuTx nalavatAnxlukx aMgasathxlagaLu. (idara vivaravAda viMgaDaneyanunx ``ideV pariBASApadada 1. nunx noVDi.'')}}
 \smallskip
-\newmeaning{\ni{aMgasathxlaBeVdaH, aMgasathxlaBeVdAH - aMgasathxsayx BeVdaH aMgasathxlaBeVdaH, aMgasathxlasayx BeVdAH aMgasathxlaBeVdAH}}
+\newmeaning{\ni{aMgasathxlaBeVdaH, aMgasathxlaBeVdAH - aMgasayx sathxla BeVdaH aMgasathxlaBeVdaH, aMgasathxlasayx BeVdAH aMgasathxlaBeVdAH}}
 \end{entry}
 
 \begin{entry}
 \word{aMgasathxla-liMgasathxla saMbaMdha}
-\meaning{\arthanonum{para\-shivanu mAnava matutx parxpaMcavanunx saqSiTx mADida meVle dUra uLiyade, ada\-ralelxV aMtagaRtanAgirutAtxne. manuSayxnu para\-shivananunx Aru sathxlagaLalilx sAkASxtAkxra mADikoLaLxbahudu. aMgana I Aru aMga\-sathxlagaLeMdare Bakatx, maheVsha, parxsAdi, pArxNaliMgi, sharaNa matutx aikayx. avanu sAkASxtAkxra mADikoLuLxva shivana sathxlagaLige liMgasathxlaveMba hesaridudx, avu karxmavAgi AcAraliMga, guru\-liMga, shivaliMga, jaMgamaliMga, parxsAdaliMga matutx mahA\-liMga enisikoLuLxtatxve. I Aru aMgasathxlagaLu Aru liMgasathxla\-gaLalilx saMbaMdha hoMdive heVgeMdare.}}
+\meaning{\arthanonum{para\-shivanu mAnava matutx parxpaMcavanunx saqSiTxmADida meVle adariMda dUra uLiyade, ada\-ralelxV aMtagaRtanAgirutAtxne. manuSayxnu para\-shivananunx Aru sathxlagaLalilx sAkASxtAkxra mADikoLaLxbahudu. aMgana I Aru aMga\-sathxlagaLeMdare Bakatx, maheVsha, parxsAdi, pArxNaliMgi, sharaNa matutx aikayx. avanu sAkASxtAkxra mADikoLuLxva shivana sathxlagaLige liMgasathxlaveMba hesaridudx, avu karxmavAgi AcAraliMga, guru\-liMga, shivaliMga, jaMgamaliMga, parxsAdaliMga matutx mahA\-liMga enisikoLuLxtatxve. I Aru aMgasathxlagaLu Aru liMgasathxla\-gaLalilx saMbaMdha hoMdive. heVgeMdare.}}
 \smallskip
-\newmeaning{\arthanonum{manuSayxna aMgavu parashivana shakitxya rUpAM\-tara. manu\-Sayxnu baMdhanadalilxruvavarege avu shakitx athavA adhoVmAye enisikoLuLxtatxve. oMdu veVLe avanu avu\-gaLanunx AdhAyxtimxka udedxVshakAkxgi baLasidare avu Bakitx athavA UdhavxRmAye enisikoLuLxtatxve.}}
+\newmeaning{\arthanonum{manuSayxna aMgavu parashivana shakitxya rUpAM\-tara. manu\-Sayxnu baMdhanadalilxruvavarege aMgasathxlagaLu shakitx athavA adhoVmAye enisikoLuLxtatxve. oMdu veVLe avanu avu\-gaLanunx AdhAyxtimxka udedxVshakAkxgi baLasidare avu Bakitx athavA UdhavxRmAye enisikoLuLxtatxve.}}
 \smallskip
-\newmeaning{\arthanonum{moTaTxmodalane AdhAyxtimxka sAdhaneya haMtadalilxruva sAdha\-kanu Bakatxnenisi\-koLuLxtAtxne. parashivana kirxyAshakitxyu Bakatxnalilx GArxNeVMdirxyavAgi rUpAMtara\-goMDidudx adaralilx para\-shivanu AcAraliMga rUpadalilx aMtagaRtavAgidAdxne. AcAra\-liMgavanunx sAkASxtakxrisikoLaLxbeVkeMba Bakatxnu tananx citatxvanenx hasatxvanAnxgi mADi\-koMDu AcAraliMgakekx parimaLa darxvayx\-gaLanunx apiRsutAtxne, hAgU A apiRtavu gaMdha\-veMba parxsAda\-vAgutatxde. Bakatxna I Bakitxge vishAvxsaBakitx athavA sharxdAdhx\-Bakitx athavA sadaBxkitx eMdu hesaru. hiVge apiRsida citatxvu sucitatxvenisi\-koLuLxtatxde. GArxNeVMdirxyadalilxruva AcAra\-liMgakekx avanu apiRsuvudariMda, GArxNeVMdirxyavu (mUgu) parashivana (AcAraliMgada) bAyi (muKa) enisikoLuLxtatxde.}}
+\newmeaning{\arthanonum{motatxmodalaneya AdhAyxtimxka sAdhaneya haMtadalilxruva sAdhaka Bakatxnenisi\-koLuLxtAtxne. parashivana kirxyAshakitxyu Bakatxnalilx GArxNeVMdirxyavAgi rUpAMtara\-goMDidudx adaralilx para\-shivanu AcAraliMga rUpadalilx aMtagaRtavAgidAdxne. AcAra\-liMgavanunx sAkASxtakxrisikoLaLxbeVkeMba Bakatxnu tananx citatxvanenxV hasatxvanAnxgi mADi\-koMDu AcAraliMgakekx parimaLa darxvayx\-gaLanunx apiRsutAtxne, hAgU A apiRtavu gaMdha\-veMba parxsAda\-vAgutatxde. Bakatxna I Bakitxge vishAvxsaBakitx athavA sharxdAdhx\-Bakitx athavA sadaBxkitx eMdu hesaru. hiVge apiRsida citatxvu sucitatxvenisi\-koLuLxtatxde. GArxNeVMdirxyadalilxruva AcAra\-liMgakekx avanu apiRsuvudariMda, GArxNeVMdirxyavu (mUgu) parashivana (AcAraliMgada) bAyi (muKa) enisikoLuLxtatxde.}}
 \smallskip
-\newmeaning{\arthanonum{eraDane AdhAyxtimxka sAdhaneya haMtadalilxruva sAdhaka\-nige maheVsha (maheVshavxra) eMdu hesaru. parashivana jAcnxna\-shakitxyu maheVshasathxladalilxruva sAdhaka\-nalilx jihevxVMdirxyavAgi (nAlageyAgi) rUpAMtaragoMDidudx, para\-shivanu adaralilx guru\-liMgavAgi aMtagaRtavAgidAdxne. guruliMgavanunx sAkASxtakxrisikoLaLxbeVkeMba maheVshanu tananx budidhxyanenxV hasatxvanAnxgi mADikoMDu, rasaveMba darxvayxvanunx apiRsi, adanunx ruci\-yeMba parxsAdavanAnxgi mADikoLuLxtAtxne. maheVshana I Bakitxge neYSiThxkABakitx eMdu hesaru. rasavanunx apiRsuva maheVshana budidhxge subudidhxyeMdu hesaru. nAlageyalilxruva guru\-liMgakekx avanu ruciyanunx apiRsuvudariMda, A apaRNeyanunx sivxVkarisuva jihevxVMdirxyavu (nAlageyu) parashivana (guru\-liMgada) bAyi (muKa) enisikoLuLxtatxde.}}
+\newmeaning{\arthanonum{eraDaneya AdhAyxtimxka sAdhaneya haMtadalilxruva sAdhaka\-nige maheVsha (maheVshavxra) eMdu hesaru. parashivana jAcnxna\-shakitxyu maheVshasathxladalilxruva sAdhaka\-nalilx jihevxVMdirxyavAgi (nAlageyAgi) rUpAMtaragoMDidudx, para\-shivanu adaralilx guru\-liMgavAgi aMtagaRtavAgidAdxne. guruliMgavanunx sAkASxtakxrisikoLaLxbeVkeMba maheVshanu tananx budidhxyanenxV hasatxvanAnxgi mADikoMDu, rasaveMba darxvayxvanunx apiRsi, adanunx ruci\-yeMba parxsAdavanAnxgi mADikoLuLxtAtxne. maheVshana I Bakitxge neYSiThxkaBakitx eMdu hesaru. rasavanunx apiRsuva maheVshana budidhxge subudidhxyeMdu hesaru. nAlageyalilxruva guru\-liMgakekx avanu ruciyanunx apiRsuvudariMda, A apaRNeyanunx sivxVkarisuva jihevxVMdirxyavu (nAlageyu) parashivana (guru\-liMgada) bAyi (muKa) enisikoLuLxtatxde.}}
 \smallskip
-\newmeaning{\arthanonum{AdhAyxtimxka sAdhaneya mUraneya haMtadalilxruva sAdhaka\-nige parxsAdi eMdu hesaru. parashivana icACxshakitxyu sAdha\-kana neVtarxvAgi rUpAMtaragoMDidudx, adaralilx aMtasathxvAgiruva parashivanige shivaliMga eMdu hesaru. shivaliMgavanunx sAkASxtakxrisikoLaLxbeVkeMba parxsAdiyu tananx ahaMkAravanenx hasatxvanAnxgi mADikoMDu beLakanunx shivaliMgakekx apiRsi, adanunx rUpa eMba parxsAdavanAnxgi mADikoLuLxtAtxne. parxsAdiya I Bakitxge sAvadhAna Bakitx eMdu hesaru. beLakanunx apiRsuva parxsAdiya ahaMkArakekx nirahaMkAraveMdu hesaru. neVtarx\-dalilxruva shivaliMgakekx avanu beLakanunx apiRsuvudariMda A apaRNeyanunx sivxVkarisuva neVterxVMdirxyavu (kaNuNx) parashivana (shivaliMgada) bAyi (muKa) enisikoLuLxtatxde.}}
+\newmeaning{\arthanonum{AdhAyxtimxka sAdhaneya mUraneya haMtadalilxruva sAdhaka\-nige parxsAdi eMdu hesaru. parashivana icACxshakitxyu sAdha\-kana neVtarxvAgi rUpAMtaragoMDidudx, adaralilx aMtasathxvAgiruva parashivanige shivaliMga eMdu hesaru. shivaliMgavanunx sAkASxtakxrisikoLaLxbeVkeMba parxsAdiyu tananx ahaMkAravanenxV hasatxvanAnxgi mADikoMDu beLakanunx shivaliMgakekx apiRsi, adanunx rUpa eMba parxsAdavanAnxgi mADikoLuLxtAtxne. parxsAdiya I Bakitxge sAvadhAnaBakitx eMdu hesaru. beLakanunx apiRsuva parxsAdiya ahaMkArakekx nirahaMkAraveMdu hesaru. neVtarx\-dalilxruva shivaliMgakekx avanu beLakanunx apiRsuvudariMda A apaRNeyanunx sivxVkarisuva neVterxVMdirxyavu (kaNuNx) parashivana (shivaliMgada) bAyi (muKa) enisikoLuLxtatxde.}}
 \smallskip
-\newmeaning{\arthanonum{AdhAyxtimxka sAdhaneya nAlakxne haMtadalilxruva sAdhaka\-nige pArxNaliMgi\-yeMdu hesaru. parashivana Adishakitxyu sAdha\-kana tavxgiMdirxyavAgi rUpAMtaragoMDidudx, adaralilx aMtasathx\-vAgiruva parashivanige jaMgamaliMgaveMdu hesaru. jaMgama \-liMgavanunx sAkASxtakxrisikoLaLxbeVkeMba pArxNaliMgiyu tananx manasasxnenxV hasatxvanAnxgi mADikoMDu, soVMkanunx jaMgama\-liMgakekx apiRsi, adanunx sapxshaRnaveMba parxsAdavanAnxgi mADikoLuLxtAtxne. pArxNaliMgiya I Bakitxge anuBAva Bakitx\break eMdu hesaru. soVMkanunx apiRsuva pArxNaliMgiya mana\-sisxge sumanaveMdu hesaru. tavxgiMdirxya (camaR)dalilxruva jaMgama\-liMgakekx avanu soVMkanunx apiRsuvudariMda, adanunx sivxVkarisuva tavxgiMdirxyavu para\-shivana (jaMgamaliMgada) bAyi (muKa) enisikoLuLxtatxde.}}
+\newmeaning{\arthanonum{AdhAyxtimxka sAdhaneya nAlakxneya haMtadalilxruva sAdhaka\-nige pArxNaliMgi\-yeMdu hesaru. parashivana Adishakitxyu sAdha\-kana tavxgiMdirxyavAgi rUpAMtaragoMDidudx, adaralilx aMtasathx\-vAgiruva parashivanige jaMgamaliMgaveMdu hesaru. jaMgama \-liMgavanunx sAkASxtakxrisikoLaLxbeVkeMba pArxNaliMgiyu tananx manasasxnenxV hasatxvanAnxgi mADikoMDu, soVMkanunx jaMgama\-liMgakekx apiRsi, adanunx sapxshaRnaveMba parxsAdavanAnxgi mADikoLuLxtAtxne. pArxNaliMgiya I Bakitxge anuBAva Bakitx\break eMdu hesaru. soVMkanunx apiRsuva pArxNaliMgiya mana\-sisxge sumanaveMdu hesaru. tavxgiMdirxya (camaR) dalilxruva jaMgama\-liMgakekx avanu soVMkanunx apiRsuvudariMda, adanunx sivxVkarisuva tavxgiMdirxyavu para\-shivana (jaMgamaliMgada) bAyi (muKa) enisikoLuLxtatxde.}}
 \smallskip
-\newmeaning{\arthanonum{aidane haMtadalilxruva sAdhakanige sharaNaneMdu hesaru. parashivana parA\-shakitxyu sharaNana shorxVterxVMdirxyavAgi rUpAMtara\-goMDidudx, adaralilx aMtasathx\-vAgiruva parashiva\-nige parxsAdaliMgaveMdu hesaru. parxsAdaliMgavanunx sAkASx\-takxrisikoLaLxbeVkeMba sharaNanu tananx jAcnxnavanenxV hasatxvanAnxgi mADikoMDu, shabadxvanunx parxsAdaliMgakekx apiRsi, sushabadxveMdu parxsAdavanunx paDeyutAtxne. shara\-Nana I Bakitxge AnaMdaBakitx eMdu hesaru. shabadxvanunx apiRsuvudariMda, A apaRNeyanunx sivxVkarisuva shorxVterxVMdirxyavu parashivana (parxsAdaliMgada) bAyi (muKa) enisikoLuLxtatxde.}}
+\newmeaning{\arthanonum{aidaneya haMtadalilxruva sAdhakanige sharaNaneMdu hesaru. para\-shivana parA\-shakitxyu sharaNana shorxVterxVMdirxyavAgi rUpAMtara\-goMDidudx, adaralilx aMtasathx\-vAgiruva parashiva\-nige parxsAdaliMgaveMdu hesaru. parxsAdaliMgavanunx sAkASx\-takxrisikoLaLxbeVkeMba sharaNanu tananx jAcnxnavanenxV hasatxvanAnxgi mADikoMDu, shabadxvanunx parxsAdaliMgakekx apiRsi, sushabadxveMdu parxsAdavanunx paDeyutAtxne. shara\-Nana I Bakitxge AnaMdaBakitx eMdu hesaru. shabadxvanunx apiRsuvudariMda, A apaRNeyanunx sivxVkarisuva shorxVterxVMdirxyavu parashivana (parxsAdaliMgada) bAyi (muKa) enisikoLuLxtatxde.}}
 \smallskip
-\newmeaning{\arthanonum{koneya haMtada sAdhakanige aikayxneMdu hesaru. para\-shivana citfshakitxyu aikayxna BAva (haqdaya)vAgi rUpAMtara\-goMDidudx, adaralilx aMtasathx\-vAgi\-ruva parashivanige mahAliMga\-veMdu hesaru. mahAliMgavanunx sAkASxtakxrisi\-koLaLxbeVkeMba aikayxnu tananx BAvavanenx (jiVvAtamxnanenx) hasatxvanAnxgi mADikoLuLx\-tAtxne. aikayxnu toVrisuva Bakitxge samarasaBakitx eMdu hesaru. taqpitxyanunx apiRsuva aikayxna BAvakekx kelavu veVLe sadABxva\-veMdu kareyalAgutatxde. haqdaya\-dalilxruva mahAliMgakekx avanu taqpitxyanunx apiRsuvudariMda, A apaRNeyanunx sivxVkarisuva haqdayavu parashivana (mahAliMgana) bAyi (muKa) enisikoLuLxtatxde.}}
+\newmeaning{\arthanonum{koneya haMtada sAdhakanige aikayxneMdu hesaru. para\-shivana citfshakitxyu aikayxna BAva (haqdaya) vAgi rUpAMtara\-goMDidudx, adaralilx aMtasathx\-vAgi\-ruva parashivanige mahAliMga\-veMdu hesaru. mahAliMgavanunx sAkASxtakxrisi\-koLaLxbeVkeMba aikayxnu tananx BAvavanenxV (jiVvAtamxnanenxV) hasatxvanAnxgi mADikoLuLx\-tAtxne. aikayxnu toVrisuva Bakitxge samarasaBakitx eMdu hesaru. taqpitxyanunx apiRsuva aikayxna BAvakekx kelavu veVLe sadABxva\-veMdu kareyalAgutatxde. haqdaya\-dalilxruva mahAliMgakekx avanu taqpitxyanunx apiRsuvudariMda, A apaRNeyanunx sivxVkarisuva haqdayavu parashivana (mahAliMgana) bAyi (muKa) enisikoLuLxtatxde.}}
 %\smallskip
 %\newmeaning{\arthanonum{aMgasathxla hAgU liMgasathxlagaLa saMbaMdhavanunx yAva shakitx yAva iMdirxya\-vAgi rUpAMtaragoMDide muMtAda meVlina vivaragaLanunx I keLaginaMte saMkiSxpatxvAgi toVrisa\-bahudu. (va.pA.koV.)}}
 %\smallskip
 %\newmeaning{\artha{piMDasathxla, piMDajAcnxnasathxla, saMsAraheVyasathxla, guru\-kAruNayxsathxla, liMgadhAraNasathxla, viBUtisathxla, rudArxkaSx \-dhAraNasathxla, paMcAkaSxriVjapasathxla, Bakitxsathxla, surUpoV\-Bayasathxla, tirxvidhi saMpatutxsathxla, catuviRdha sArAyasathxla, upAdhimATasathxla, nirupAdhi mATasathxla matutx sahaja mATasathxla eMba 15 viBAgagaLu Bakatxsathxladalilxve.} \artha{mAheVshavxraparxshaMsAsathxla, liMganiSAThxsathxla, pUvARsharxya nirasanasathxla, vAgadevxYtanirasanasathxla, AhAvxnanirasanasathxla, aSaTxtanumUtiRnirasanasathxla, savaRgatanirasanasathxla, shivajaga\-namxyasathxla matutx deVhikaliMgasathxla eMba 9 viBAgagaLu mAheV\-shavxrasathxladalilxve.} \artha{pArxsAdisathxla, gurumAhAtamxyXsathxla, liMgamAhAtamxyXsathxla, jaMgamamAhAtamxyXsathxla, BakatxmAhAtamxyXsathxla, sharaNamAhAtamxyX\-sathxla matutx parxsAdamAhAtamxyXsathxla eMba 7 viBAgagaLu parxsAdi\-sathxladalilxve.} \artha{pArxNaliMgisathxla, pArxNaliMgAcaRnasathxla, shivayoVgasamAdhi\-sathxla, liMganijasathxla matutx aMgaliMgasathxla eMba 5 viBAgagaLu pArxNaliMgisathxladalilxve.} \artha{sharaNasathxla, tAmasanirasanasathxla, nideRVshasathxla matutx shiVla\-saMpAdanasathxla eMba 4 viBAgagaLu sharaNasathxladalilxve.}
 %\artha{aikayxsathxla, AcArasaMpatitxsathxla, EkaBAjanasathxla matutx saha\-BoVjanasathxla eMba 4 viBAgagaLu aikayxsathxladalilxve.}}
 \smallskip
-\newmeaning{\ni{aMgasathxla liMgasathxlasaMbaMdhaH - aMgasathxlaM ca liMga\-sathxlaM ca aMgasathxlaliMgasathxleV, tayoVH saMbaMdhaH aMga\-sathxlaliMgasathxla saMbaMdhaH}}
+\newmeaning{\ni{aMgasathxlaliMgasathxlasaMbaMdhaH - aMgasathxlaM ca liMga\-sathxlaM ca aMgasathxlaliMgasathxleV, tayoVH saMbaMdhaH aMga\-sathxlaliMgasathxla saMbaMdhaH}}
 \end{entry}
 
 \begin{entry}
 \word{aMgasathxlAsharxyAshakitx}
 \src{saM}
-\meaning{\arthanonum{shakitxya BeVda, BakitxrUpada idu Bavavanunx nAshapaDisuvaMtahadudx, vAsanArahitavAdadudx,\break shudAdhx, sUkASxmX, shoVBanA, sacicxdAnaMdarUpadudx matutx Bukitx\break \-mukitx Palavanunx niVDuvaMtahadudx. liMgAshirxta shakitxgU (liMga\-sathxlAsharxyavAda shakitxgU) idakUkx BeVdavilalx. nivaqtitx\-rUpada idariMda jagatitxna parxLaya. UdhavxRmuKiyAda idu nimAR\-yABakitx eniside. I shakitxya viSayadalilxna BakitxyiMda upAsa\-kana upAsakatavxvu GaTisutatxde.}}
+\meaning{\arthanonum{shakitxya BeVda, BakitxrUpada idu Bavavanunx nAshapaDisuvaMtahadudx, vAsanArahitavAdadudx, shudadhx, sUkaSxmX, shoVBana, sacicxdAnaMdarUpadudx matutx Bukitxbreak\-mukitx Palavanunx niVDuvaMtahadudx. liMgAshirxta shakitxgU (liMga\-sathxlAsharxyavAda shakitxgU) idakUkx BeVdavilalx. nivaqtitx\-rUpada idariMda jagatitxna parxLaya. UdhavxRmuKiyAda idu nimARya\-Bakitx eniside. I shakitxya viSayadalilxna BakitxyiMda upAsa\-kana upAsakatavxvu GaTisutatxde.}}
 \medskip
 \begin{shl}
 aMgasathxlAsharxyAshakitxBaRkitxrUpA BavApahA |\\[2pt]
-yathA mahAnalajAvxlA viBakAtx diVpikAkaqtiH ||\\[2pt]
+yathA mahAnalajAvxlA viBakAtx diVpikAkaqtiH ||\\[4pt]
 tathA mAheVshavxriV shakitxviRBakAtx BakitxrUpiNiV |\\[2pt]
-jAvxlA tamasivxniV yasAmxdf diVpikA suparxkAshiniV ||\\[2pt]
+jAvxlA tamasivxniV yasAmxdf diVpikA suparxkAshiniV ||\\[4pt]
 tasAmxtf savAsanA shakitxBaRkitxniRvARsanA matA |\\[2pt]
-BakitxmahatatxrA shudAdhx susUkASxmX shoVBanA parA ||
+Bakitx\char'263mahatatxrA shudAdhx susUkASxmX shoVBanA parA ||
 \end{shl}
 
 \medskip
@@ -652,16 +655,16 @@ BakitxmahatatxrA shudAdhx susUkASxmX shoVBanA parA ||
 
 \begin{entry}
 \word{aMgasoVMku}
-\meaning{\artha{deVhasapxshaRvAdudu.} \ullekha{aMgasoVMkina suKa\-gaLelalxvapiRta keVLu saMgavaha suKava parxsAdaveMdeV tALu. (diVkASx\break boV. 124-1).} \artha{liMgavanunx dharisuva Aru sAthxnagaLalilx oMdu. ede;}
-\ullekha{kakeSx karasathxla utatxmAMga urasejejx aMgasoVMku amaLoVkayxveMbuda nAnu manadalilx ariyadaMdu. (savasaM. 1; basava. 1126-306); karasathxla sejejxyAda sharaNanu honinxge keYyAMtaDadu karasathxlavalalx, adu kamaRsathxLa. aMgasoVMku sejejx\-yAda sharaNanu apipxna soVMkina suKakekx aMgeYsidanAdare adu aMgasoVMkalalx. adu kamaRsoVMku. (savasaM. 3; cenanxba. 500-155).}}
+\meaning{\artha{deVhasapxshaR.} \ullekha{aMgasoVMkina suKa\-gaLelalxvapiRta keVLu saMgavaha suKava parxsAdaveMdeV tALu. (diVkASx\break boV. 124-1).} \artha{liMgavanunx dharisuva Aru sAthxnagaLalilx oMdu. ede;}
+\ullekha{kakeSx karasathxla utatxmAMga urasejejx aMgasoVMku amaLoVkayxveMbuda nAnu manadalilx ariyadaMdu. (savasaM. 1; basava. 1126-306); karasathxla sejejxyAda sharaNanu honinxge keYyAMtaDadu karasathxlavalalx, adu kamaRsathxLa. aMgasoVMku sejejx\-yAda sharaNanu AtasUnegAra. (savasaM. 3; cenanxba. 500-155).}}
 \end{entry}
 %sakalapadAthaRdarxvayxM\-gaLelalxva... caraliMgada muKadiMda saMduda keYkoMbudu aMgasoVMku (savasaM. 9; shirxV mukitx-(vacana saMcaya)).
 
 \begin{entry}
-\word{aMgahiVnaru}
+\word{aMgahiVna}
 \src{va}
-\meaning{\arthanonum{budidhxhiVnaru. aMgavu arivu eninxsi\-koLuLxvuda\-riMda aMga\-hiVnareMdare arivilalx\-davaru eMdu athaR.}
-\ullekha{avaru kANabeVku, ivaru kANabeVkeMba Barxmeya Barxmi\-taru aMgahiVnaru. (savasaM. 3; cenanxba. 335-108); liMga\-vabalalx saMgavirahitareMdu muTiTxkoDuvarayAyx aMgahiVnaru. (savasaM. 12; deVshikeVM. 362-110).}}
+\meaning{\arthanonum{budidhxhiVna. aMgavu arivu eninxsi\-koLuLxvuda\-riMda aMga\-hiVnaneMdare arivilalx\-davanu eMdu athaR.}
+\ullekha{avaru kANabeVku, ivaru kANabeVkeMba Barxmeya Barxmi\-taru aMgahiVnaru. (savasaM. 3; cenanxba. 335-108); liMgava\-balalx saMgavirahitareMdu muTiTxkoDuvarayAyx aMgahiVnaru. (savasaM. 12; deVshikeVM. 362-110).}}
 \smallskip
 \newmeaning{\ni{aMgahiVnAH - aMgeVna hiVnAH aMgahiVnAH}}
 \end{entry}
@@ -669,8 +672,8 @@ BakitxmahatatxrA shudAdhx susUkASxmX shoVBanA parA ||
 \begin{entry}
 \word{aMgAcaRne}
 \src{va}
-\meaning{\arthanonum{parxdhAnapUje, deVhakekx mADuva pUje.}
-\ullekha{pAdoV\-daka paMceVMdirxyAcaRne, liMgoVdaka aMgA\-caRne, parxsAdoVdaka GArxNAcaRne. (savasaM. 3; cenanxba. 621-188); biTuTx, liMga kirxyegaLanuLaLxvarAgi aMgAcaRne\-yanatigaLedu liMgAcaRneya mADutatx elalx kirxyegaLanUnx mADuvudayayx. (savasaM. 7; caMdima. 550-182).}}
+\meaning{\arthanonum{parxdhAna pUje, deVhakekx mADuva pUje.}
+\ullekha{pAdoV\-daka paMceVMdirxyAcaRne, liMgoVdaka aMgA\-caRne, parxsAdoVdaka GArxNAcaRne. (savasaM. 3; cenanxba. 621-188); liMga kirxyegaLanuLaLxvarAgi aMgAcaRne\-yanatigaLedu liMgAcaRneya mADutatx. (savasaM. 7; caMdima. 550-182).}}
 \smallskip
 \newmeaning{\ni{aMgAcaRnaM - aMgasayx acaRnaM aMgAcaRnaM}}
 \end{entry}
@@ -679,7 +682,7 @@ BakitxmahatatxrA shudAdhx susUkASxmX shoVBanA parA ||
 \word{aMgApiRta}
 \src{va}
 \meaning{\arthanonum{deYhika suKa\-gaLanunx anuBavisuvudu. liMgakekx apiRsadeV aMgakekx neVra\-vAgi apiRsi\-koLuLxvudu.}
-\ullekha{aMgApiRta BuMjanegaLanu Bakatx jaMgamArAdhayx sathxLaMgaLanunxLaLxvarAgiduR (savasaM. 7; caMdima. 550-182); savARMgavanu shatapatarxdalilx seYtiTuTx liMgakekx apiRsida neYveVdayxda liMga nenahinalilxye sivxVkarisuvudu aMgApiRtava visajiRsuvudayAyx (savasaM. 11; toVMTasi. 300-143).}}
+\ullekha{aMgApiRta BuMjanegaLanu, Bakatx jaMgamArAdhayxgaLu liMga virahitarAgi mADidaDe liMgavililx. (savasaM. 7; caMdima. 550-182); savARMga\-vanu shatapatarxdalilx seYtiTuTx liMgakekx apiRsida neYveVdayxva liMga nenahinalilxye sivxVkarisuvudu aMgApiRtava visajiRsuvudayAyx. (savasaM. 11; toVMTasi. 300-143).}}
 \smallskip
 \newmeaning{\ni{aMgApiRtaBuMjanaM - aMgeV apiRtaM aMgApiRtaM, tasayxMgApiRtasayx BuMjanaM aMgApiRtaBuMjanaM}}
 \end{entry}
@@ -687,11 +690,11 @@ BakitxmahatatxrA shudAdhx susUkASxmX shoVBanA parA ||
 \begin{entry}
 \word{aMgAleVpa}
 \src{saM}
-\meaning{\arthanonum{kamaRleVpavilalxda shivayoVgi. deVsha\break-kAlAdi pariceCxVdavilalxda, cidAnaMdamayavAda mahatfsavxrUpavanunx sAkASxtAkxragoLisikoMDiruva shiva\-yoVgi. aMtaha shivayoVgiya aMgakekx kamaRleVpavu uMTAga\-diruvudariMda aMgAleVpa enisutAtxne. AkAshakekx hoge muMtAda kalamxshagaLu aMTadiruvaMte citfsavxrUpa\-vAda shiva\-yoVgiyu jagatfsavxrUpanAdarU sAMsArika kamaR\-PalagaLu Atanige aMTuvudilalx.}}
+\meaning{\arthanonum{kamaRleVpavilalxda shivayoVgi. deVsha\-kAlAdi pariceCxVdavilalxda, cidAnaMdamayavAda mahatfsavxrUpavanunx sAkASxtAkxragoLisikoMDiruva shiva\-yoVgi. aMtaha shivayoVgiya aMgakekx kamaRleVpavu uMTAga\-diruvudariMda Atanu aMgAleVpa enisutAtxne. AkAshakekx hoge muMtAda kalamxSagaLu aMTadiruvaMte citfsavxrUpa\-vAda shiva\-yoVgiyu jagatfsavxrUpanAdarU sAMsArika kamaR\-PalagaLu Atanige aMTuvudilalx.}}
 \smallskip
 \begin{shl}
 dikAkxlAdayxnavaciCxnanxM cidAnaMdamayaM mahatf |\\
-yasayx rUpamidaM KAyxtaM soV{\char'273}MgAleVpa ihoVcayxteV ||\\
+yasayx rUpamidaM KAyxtaM soV{\char'273}MgAleVpa ihoVcayxteV ||\\[3pt]
 samasatx jagadAtAmx{\char'273}pi saMvidUrxpoV mahAmatiH |\\
 lipayxteV neYva saMsAreYyaRthA dhUmAdiBinaRBaH ||
 \end{shl}
@@ -722,10 +725,12 @@ aMgAleVpasathxlaM pashAcxtf .............. ||
 \word{aMgAsharxya}
 \src{va}
 \meaning{\arthanonum{deVhavanenxV avalaMbisiruva pArxpaMcika suKa sithxti.}
-\ullekha{liMgABimAnige aMgAsharxyavilalx. (savasaM. 3;\break cenanxba. 534-165); aMgada meVle shirxVguru liMga saMbaMdhava mADi aMgAsharxyavanaLidu liMgAsharxyava mADida baLika aMga\-BoVgaMgaLa biTuTx, liMga kirxyegaLanunxLaLxvarAgi aMgAcaRneyanatigaLedu. (savasaM. 7; caMdima. 550-182).}}
+\ullekha{liMgABimAnige aMgAsharxyavilalx. (savasaM. 3;\break cenanxba. 534-165); aMgada meVle shirxVguru liMga saMbaMdhava mADi aMgAsharxyavanaLidu liMgAsharxyava mADida baLika aMga\-BoVgaMgaLa biTuTx, liMgakirxyegaLanunxLaLxvarAgi aMgAcaRneya\-nati\-gaLedu. (savasaM. 7; caMdima. 550-182).}}
 \smallskip
 \newmeaning{\ni{aMgAsharxyaH - aMgasayx AsharxyaH aMgAsharxyaH athavA aMgaM AsharxyaH yasayx saH aMgAsharxyaH}}
 \end{entry}
+
+%raghu, page 11
 
 \begin{entry}
 \word{aMgi}
